<resources>
    <string name="app_name">Nandur Yok!</string>
    <string name="create_new_account"><u>Create New Account</u></string>
    <string name="hello">Hello!</string>
    <string name="create_an_account_to_continue">Create an account to continue</string>
    <string name="name">Name</string>
    <string name="type_your_name">Type your name</string>
    <string name="email_address">Email Address</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="phone">Phone</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="create">Create</string>
    <string name="welcome_back">Welcome!</string>
    <string name="username">Username</string>
    <string name="type_your_username">Type your username</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="log_in">LOG IN</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jual">Sell</string>
    <string name="adress">Adress</string>
    <string name="logout">Logout</string>
    <string name="please_log_in_to_continue">Please log in to continue</string>
    <string name="remember_me">Remember me</string>
    <string name="pohon_anggrek">Pohon Anggrek</string>
    <string name="jenis">Jenis :</string>
    <string name="tropis">Tropis</string>
    <string name="stock">Stock :</string>
    <string name="_4">4</string>
    <string name="kondisi">Kondisi :</string>
    <string name="baru">Baru</string>
    <string name="rp">Rp.</string>
    <string name="_200000">200000</string>
    <string name="terjual">Terjual :</string>
    <string name="_40">40</string>
    <string name="beli">Beli?</string>
    <string name="_085335156657">085335156657</string>
    <string name="type_your_address">Type your address</string>
    <string name="nandur_yok">Nandur Yok!</string>
    <string name="_085225156657">085225156657</string>
    <string name="log_out">Log out</string>
    <string name="mujiburrohman">Mujiburrohman</string>
    <string name="mujib">mujib</string>
    <string name="jepara_jawa_tengah">Jepara - Jawa Tengah</string>
    <string name="mujiburr741_gmail_com">mujiburr741@gmail.com</string>
    <string name="nama">Nama :</string>
    <string name="anggrek">Anggrek</string>
    <string name="_5">5</string>
    <string name="harga">Harga :</string>
    <string name="type_your_sold_of_plant">Type your sold of plant</string>
    <string name="type_your_plant_condition">Type your plant condition</string>
    <string name="type_your_stock_of_plant">Type your stock of plant</string>
    <string name="type_your_kind_of_plant">Type your kind of plant</string>
    <string name="type_your_name_plant">Type your name plant</string>
    <string name="please_sell_your_plant">Please Sell Your Plant</string>
    <string name="type_your_price_of_plant">Type your price of plant</string>
    <string name="upload_image">Upload Image</string>
    <string name="sell">Sell</string>
    <string name="alamat">Alamat :</string>
    <string name="email">Email :</string>
</resources>
